# library-api

./: .dockerignore  .env.example  .gitignore  API.md  Assumptions.md  Deploy.md  Dockerfile  README.md  docker-compose.yml  logging.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 81c90737812f_init.py
scripts/: entrypoint.sh  prestart.sh
scripts/db/: README.md  create_migration.sh  migrate.sh  migration_status.sh  reset_db.sh  rollback.sh
src/: main.py
src/auth/: dependencies.py  exceptions.py  permissions.py  router.py  schemas.py  service.py
src/books/: __init__.py  models.py  router.py  schemas.py  service.py
src/borrows/: __init__.py  models.py  router.py  schemas.py  service.py
src/core/: config.py  db.py  dependencies.py  exceptions.py  logging_config.py  pagination.py  ratelimit.py  security.py
src/users/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/api/routes/: test_auth_edge_cases.py  test_books.py  test_books_edge_cases.py  test_borrows.py  test_borrows_edge_cases.py  test_login.py  test_permissions.py  test_users.py  test_users_edge_cases.py
tests/auth/: test_auth.py
tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
tests/utils/: user.py
