[project]
name = "app"
version = "0.1.0"
description = "PDFHero Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "python-multipart",
    "email-validator",
    "passlib[bcrypt]",
    "tenacity",
    "pydantic",
    "pydantic-settings",
    "emails",
    "jinja2",
    "alembic",
    "httpx",
    "psycopg[binary]",
    "sqlmodel",
    "bcrypt<5.0,>=4.0",
    "pyjwt",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "pre-commit",
    "types-passlib",
    "coverage",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
